refactor: departments, teams and groups controllers and routes
