# packages/db-api/openapi.yaml
@@ -35,16 +35,16 @@ components:
           example: 1
         name:
           type: string
-          example: "New York Office"
+          example: 'New York Office'
         country:
           type: string
-          example: "US"
+          example: 'US'
         city:
           type: string
-          example: "New York"
+          example: 'New York'
         address:
           type: string
-          example: "5th Street - Building 100, first floor"
+          example: '5th Street - Building 100, first floor'
         workSetting:
           type: object
         users:
@@ -81,16 +81,16 @@ components:
       properties:
         name:
           type: string
-          example: "New York Office"
+          example: 'New York Office'
         country:
           type: string
-          example: "US"
+          example: 'US'
         city:
           type: string
-          example: "New York"
+          example: 'New York'
         address:
           type: string
-          example: "5th Street - Building 100, first floor"
+          example: '5th Street - Building 100, first floor'
         workSettingId:
           type: integer
           example: 2
@@ -141,14 +141,14 @@ components:
           example: 1
         firstName:
           type: string
-          example: "John"
+          example: 'John'
         lastName:
           type: string
-          example: "Doe"
+          example: 'Doe'
         email:
           type: string
           format: email
-          example: "john.doe@example.com"
+          example: 'john.doe@example.com'
     User:
       type: object
       properties:
@@ -157,22 +157,22 @@ components:
           example: 1
         firstName:
           type: string
-          example: "John"
+          example: 'John'
         lastName:
           type: string
-          example: "Doe"
+          example: 'Doe'
         email:
           type: string
           format: email
-          example: "john.doe@example.com"
+          example: 'john.doe@example.com'
         role:
           type: string
-          example: "Admin"
+          example: 'Admin'
           enum:
             - Admin
             - User
         location:
-          $ref: "#/components/schemas/Location"
+          $ref: '#/components/schemas/Location'
         reportsTo:
           type: object
           properties:
@@ -181,26 +181,26 @@ components:
               example: 2
             firstName:
               type: string
-              example: "Jane"
+              example: 'Jane'
             lastName:
               type: string
-              example: "Smith"
+              example: 'Smith'
     UserInput:
       type: object
       properties:
         email:
           type: string
           format: email
-          example: "john.doe@example.com"
+          example: 'john.doe@example.com'
         firstName:
           type: string
-          example: "John"
+          example: 'John'
         lastName:
           type: string
-          example: "Doe"
+          example: 'Doe'
         role:
           type: string
-          example: "User"
+          example: 'User'
           enum:
             - Admin
             - User
@@ -218,7 +218,7 @@ components:
           example: 1
         name:
           type: string
-          example: "Engineering"
+          example: 'Engineering'
     Department:
       type: object
       properties:
@@ -227,10 +227,10 @@ components:
           example: 1
         name:
           type: string
-          example: "Engineering"
+          example: 'Engineering'
         description:
           type: string
-          example: "Handles all engineering tasks."
+          example: 'Handles all engineering tasks.'
         locationId:
           type: integer
           example: 5
@@ -239,10 +239,10 @@ components:
       properties:
         name:
           type: string
-          example: "Engineering"
+          example: 'Engineering'
         description:
           type: string
-          example: "Handles all engineering tasks."
+          example: 'Handles all engineering tasks.'
         locationId:
           type: integer
           example: 5
@@ -251,10 +251,10 @@ components:
       properties:
         name:
           type: string
-          example: "Updated Department Name"
+          example: 'Updated Department Name'
         description:
           type: string
-          example: "Updated description of the department."
+          example: 'Updated description of the department.'
     UserDepartmentRequest:
       type: object
       properties:
@@ -272,25 +272,25 @@ components:
           example: 87
         firstName:
           type: string
-          example: "Youssef"
+          example: 'Youssef'
         lastName:
           type: string
-          example: "Issa"
+          example: 'Issa'
         email:
           type: string
-          example: "ysf@test.com"
+          example: 'ysf@test.com'
     SuccessResponse:
       type: object
       properties:
         message:
           type: string
-          example: "Operation completed successfully."
+          example: 'Operation completed successfully.'
     UserTeamResponse:
       type: object
       properties:
         message:
           type: string
-          example: "User successfully assigned to the team"
+          example: 'User successfully assigned to the team'
         data:
           type: object
           properties:
@@ -321,11 +321,11 @@ components:
         createdAt:
           type: string
           format: date-time
-          example: "2024-01-01T12:00:00Z"
+          example: '2024-01-01T12:00:00Z'
         updatedAt:
           type: string
           format: date-time
-          example: "2024-01-01T12:30:00Z"
+          example: '2024-01-01T12:30:00Z'
     GroupInput:
       type: object
       properties:
@@ -453,7 +453,7 @@ paths:
                 properties:
                   success:
                     type: string
-                    example: "Location updated successfully"
+                    example: 'Location updated successfully'
     delete:
       summary: Delete a location by ID
       tags:
@@ -475,7 +475,7 @@ paths:
                 properties:
                   success:
                     type: string
-                    example: "Location deleted successfully"
+                    example: 'Location deleted successfully'
   /login:
     post:
       summary: Generate a login token for a user
@@ -492,7 +492,7 @@ paths:
                 email:
                   type: string
                   format: email
-                  example: "user@example.com"
+                  example: 'user@example.com'
       security: []
       responses:
         200:
@@ -504,7 +504,7 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: "Login token generated and email job created successfully"
+                    example: 'Login token generated and email job created successfully'
   /validate-token:
     post:
       summary: Validate a login token
@@ -521,10 +521,10 @@ paths:
                 email:
                   type: string
                   format: email
-                  example: "user@example.com"
+                  example: 'user@example.com'
                 loginToken:
                   type: string
-                  example: "4c2fdef7-9d3b-4c2d-a1b6-9c2bfc51900b"
+                  example: '4c2fdef7-9d3b-4c2d-a1b6-9c2bfc51900b'
       security: []
       responses:
         200:
@@ -536,7 +536,7 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: "Login token is valid"
+                    example: 'Login token is valid'
   /logout:
     post:
       summary: User logout
@@ -547,7 +547,7 @@ paths:
         required: false
         content: {}
       responses:
-        "200":
+        '200':
           description: Successfully logged out.
   /users:
     get:
@@ -581,7 +581,7 @@ paths:
                   data:
                     type: array
                     items:
-                      $ref: "#/components/schemas/MinimalUser"
+                      $ref: '#/components/schemas/MinimalUser'
                   next:
                     type: boolean
                     description: Indicates if there are more pages.
@@ -597,14 +597,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/UserInput"
+              $ref: '#/components/schemas/UserInput'
       responses:
         201:
           description: User created successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/User"
+                $ref: '#/components/schemas/User'
         500:
           description: Server error
   /users/{id}:
@@ -626,7 +626,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/User"
+                $ref: '#/components/schemas/User'
         404:
           description: User not found
         500:
@@ -648,14 +648,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/UserInput"
+              $ref: '#/components/schemas/UserInput'
       responses:
         200:
           description: User updated successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/User"
+                $ref: '#/components/schemas/User'
         400:
           description: Invalid user ID
         500:
@@ -678,7 +678,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/User"
+                $ref: '#/components/schemas/User'
         400:
           description: Invalid user ID
         500:
@@ -702,15 +702,15 @@ paths:
             type: integer
             default: 0
       responses:
-        "200":
+        '200':
           description: A list of departments
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/MinimalDepartment"
-        "500":
+                  $ref: '#/components/schemas/MinimalDepartment'
+        '500':
           description: Internal server error
     post:
       summary: Create a new department
@@ -721,17 +721,17 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/DepartmentCreateRequest"
+              $ref: '#/components/schemas/DepartmentCreateRequest'
       responses:
-        "201":
+        '201':
           description: Department created successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/MinimalDepartment"
-        "400":
+                $ref: '#/components/schemas/MinimalDepartment'
+        '400':
           description: Bad request
-        "500":
+        '500':
           description: Internal server error
   /departments/{departmentId}:
     get:
@@ -746,13 +746,13 @@ paths:
           schema:
             type: integer
       responses:
-        "200":
+        '200':
           description: A department
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Department"
-        "404":
+                $ref: '#/components/schemas/Department'
+        '404':
           description: Department not found
     put:
       summary: Update a department by ID
@@ -770,17 +770,17 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/DepartmentUpdateRequest"
+              $ref: '#/components/schemas/DepartmentUpdateRequest'
       responses:
-        "200":
+        '200':
           description: Department updated successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/MinimalDepartment"
-        "400":
+                $ref: '#/components/schemas/MinimalDepartment'
+        '400':
           description: Invalid department ID
-        "500":
+        '500':
           description: Internal server error
     delete:
       summary: Soft delete a department by ID
@@ -794,15 +794,15 @@ paths:
           schema:
             type: integer
       responses:
-        "200":
+        '200':
           description: Department soft-deleted successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/SuccessResponse"
-        "400":
+                $ref: '#/components/schemas/SuccessResponse'
+        '400':
           description: Invalid department ID
-        "500":
+        '500':
           description: Internal server error
   /userDepartments:
     post:
@@ -815,19 +815,19 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/UserDepartmentRequest"
+              $ref: '#/components/schemas/UserDepartmentRequest'
       responses:
-        "200":
+        '200':
           description: User successfully assigned to department
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/SuccessResponse"
-        "400":
+                $ref: '#/components/schemas/SuccessResponse'
+        '400':
           description: Bad request, invalid data
-        "404":
+        '404':
           description: User or department not found
-        "500":
+        '500':
           description: Internal server error
   /userDepartments/user/{userId}:
     get:
@@ -843,17 +843,17 @@ paths:
             type: integer
           description: ID of the user whose departments are being retrieved
       responses:
-        "200":
+        '200':
           description: List of departments assigned to user
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/MinimalDepartment"
-        "404":
+                  $ref: '#/components/schemas/MinimalDepartment'
+        '404':
           description: User not found
-        "500":
+        '500':
           description: Internal server error
   /userDepartments/department/{departmentId}:
     get:
@@ -869,17 +869,17 @@ paths:
             type: integer
           description: ID of the department whose users are being retrieved
       responses:
-        "200":
+        '200':
           description: List of users assigned to department
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/UserInDepartment"
-        "404":
+                  $ref: '#/components/schemas/UserInDepartment'
+        '404':
           description: Department not found
-        "500":
+        '500':
           description: Internal server error
   /userDepartments/user/{userId}/department/{departmentId}:
     delete:
@@ -901,15 +901,15 @@ paths:
             type: integer
           description: ID of the department from which the user will be removed
       responses:
-        "200":
+        '200':
           description: User successfully removed from department
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/SuccessResponse"
-        "404":
+                $ref: '#/components/schemas/SuccessResponse'
+        '404':
           description: User or department not found
-        "500":
+        '500':
           description: Internal server error
   /teams:
     get:
@@ -919,14 +919,14 @@ paths:
       parameters:
         - name: page
           in: query
-          description: Page number (default: 0)
+          description: 'Page number (default: 0)'
           required: false
           schema:
             type: integer
             default: 0
         - name: limit
           in: query
-          description: Number of teams per page (default: 10)
+          description: 'Number of teams per page (default: 10)'
           required: false
           schema:
             type: integer
@@ -1077,20 +1077,20 @@ paths:
                   example: 101
                 active:
                   type: boolean
-                  description: Whether the user is actively assigned to the team (default: true)
+                  description: 'Whether the user is actively assigned to the team (default: true)'
                   example: true
       responses:
-        "201":
+        '201':
           description: User successfully assigned to the team
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserTeamResponse'
-        "400":
+        '400':
           description: Bad request (missing or invalid parameters)
-        "409":
+        '409':
           description: User is already assigned to the team
-        "500":
+        '500':
           description: Internal server error
   /userTeams/user/{userId}:
     get:
@@ -1106,7 +1106,7 @@ paths:
             type: integer
             example: 1
       responses:
-        "200":
+        '200':
           description: List of teams assigned to the user
           content:
             application/json:
@@ -1114,9 +1114,9 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Team'
-        "404":
+        '404':
           description: User not found
-        "500":
+        '500':
           description: Internal server error
   /userTeams/team/{teamId}:
     get:
@@ -1132,7 +1132,7 @@ paths:
             type: integer
             example: 101
       responses:
-        "200":
+        '200':
           description: List of users assigned to the team
           content:
             application/json:
@@ -1140,9 +1140,9 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
-        "404":
+        '404':
           description: Team not found
-        "500":
+        '500':
           description: Internal server error
   /userTeams/user/{userId}/team/{teamId}:
     delete:
@@ -1164,15 +1164,15 @@ paths:
             type: integer
             example: 101
       responses:
-        "200":
+        '200':
           description: User successfully removed from the team
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserTeamResponse'
-        "404":
+        '404':
           description: User or team not found
-        "500":
+        '500':
           description: Internal server error
   /groups:
     get:
